--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ build/
 .DS_Store
 Thumbs.db
 
+
+# Ignorar carpetas de plataforma y node_modules
+appbibi/android/
+appbibi/ios/
+appbibi/macos/
+node_modules/
