--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "nodemon server.js",
     "create-admin": "node createAdmin.js"
   },
-  "keywords": ["nabi", "hotcakes", "pedidos", "backend"],
+  "keywords": [
+    "nabi",
+    "hotcakes",
+    "pedidos",
+    "backend"
+  ],
   "author": "Nabi Team",
   "license": "ISC",
   "dependencies": {
@@ -18,7 +23,8 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -26,4 +32,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-}            
+}
